# English-tool-learnig

./: .gitignore  InicialitionWindows.py  LICENSE  Makefile  README.md  Window.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-app.yml
Controller/: Adapter.py  Inicialition.py  InitalizationLinux.py  Initialization.py  InitializationWindows.py  Instalation.py  Player.py  Timer.py
Interface/: Home.py
Model/: CambridgeRequest.py  SaveJSON.py  SendEmail.py
Test/: Test.py
model/: CambridgeRequest.py  SaveFile.py  SaveJSON.py  words.json
